--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,5 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 60px;
+    min-height: 80px;
+}
+
+.headerBlock > h1 {
+    margin-bottom: 0;
+}
+
+.buttonsAndUserInfoSection {
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
 }
