--- a/src/component/PostContent/PostContent.module.css
+++ b/src/component/PostContent/PostContent.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 0 18vw;
-    max-height: calc(100% - 140px);
+    max-height: calc(100vh - 140px);
     overflow-x: hidden;
     overflow-y: auto;
 }
@@ -10,4 +10,9 @@
 .headerAndEditButtonSection {
     display: flex;
     column-gap: 1vw;
+}
+
+.buttonsSection {
+    display: flex;
+    justify-content: flex-end;
 }
