--- a/src/component/PostCard/PostCard.module.css
+++ b/src/component/PostCard/PostCard.module.css
@@ -1,3 +1,19 @@
 .infoSection {
     margin-top: 12px;
 }
+
+.likesIcon {
+    color: dodgerblue!important;
+    font-size: 24px;
+}
+
+.likersHint {
+    display: flex;
+    flex-direction: column;
+}
+
+.likerName {
+    white-space: break-spaces;
+    margin-top: 0.6em;
+    line-height: 1em;
+}
